--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@ Hello there, awesome person!
     </head>
 
     <body>
-        The HTML content goes here.
+        <h1> The HTML content goes here.</h1>
     </body>
 </html>
