--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ Hello there, awesome person!
     </head>
 
     <body>
-        <h1> The HTML content goes here.</h1>
+<img src="https://avatars.githubusercontent.com/u/65187325?v=4">
+
     </body>
 </html>
